# scientalab

./: README.md  pyproject.toml
scripts/: train.py
src/scientalab/: __init__.py  utils.py
src/scientalab/datamodule/: pancreas_datamodule.py  pancreas_dataset.py
src/scientalab/model/: invae.py
src/scientalab/module/: mlp.py
