[project]
name = "scientalab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "paul", email = "znowa@hotmail.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "lightning>=2.5.5",
    "mlflow>=3.3.2",
    "polars>=1.33.1",
    "ruff>=0.13.0",
    "scanpy>=1.11.4",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
